Support building deb file with CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,12 @@
 
+SET(MAJOR_VERSION 0)
+SET(MINOR_VERSION 2)
+SET(PATCH_VERSION 1)
+SET(MSDFGL_DESCRIPTION "OpenGL MSDF Generator and renderer")
+
 cmake_minimum_required (VERSION 3.9)
-project (msdfgl VERSION 0.2 DESCRIPTION "OpenGL MSDF Generator and renderer")
+project (msdfgl VERSION ${MAJOR_VERSION}.${MINOR_VERSION}
+         DESCRIPTION "${MSDFGL_DESCRIPTION}")
 
 if (WIN32)
   # Modify these to match your environment
@@ -25,7 +31,9 @@ set(SHADERS ${CMAKE_CURRENT_SOURCE_DIR}/src/font_fragment.glsl
             ${CMAKE_CURRENT_SOURCE_DIR}/src/msdf_vertex.glsl)
 set(SHADER_HEADER ${CMAKE_CURRENT_BINARY_DIR}/_msdfgl_shaders.h)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+set(MSDFGL_VERSION "${MAJOR_VERSION}.${MINOR_VERSION}")
+configure_file(include/msdfgl.h.in msdfgl.h @ONLY)
 
 message("-- Generating header generator")
 if (WIN32)
@@ -139,4 +147,36 @@ endif()
 
 
 install(TARGETS msdfgl msdfglstatic DESTINATION lib)
-install(FILES include/msdfgl.h DESTINATION include)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/msdfgl.h DESTINATION include)
+
+
+IF(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
+INCLUDE(InstallRequiredSystemLibraries)
+
+
+SET(CPACK_SET_DESTDIR "on")
+SET(CPACK_PACKAGING_INSTALL_PREFIX "/tmp")
+SET(CPACK_GENERATOR "DEB")
+
+SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${MSDFGL_DESCRIPTION}")
+SET(CPACK_PACKAGE_VENDOR "Henrik Nyman")
+SET(CPACK_PACKAGE_CONTACT "h@nyymanni.com")
+SET(CPACK_PACKAGE_VERSION_MAJOR "${MAJOR_VERSION}")
+SET(CPACK_PACKAGE_VERSION_MINOR "${MINOR_VERSION}")
+SET(CPACK_PACKAGE_VERSION_PATCH "${PATCH_VERSION}")
+SET(CPACK_PACKAGE_NAME "lib${CMAKE_PROJECT_NAME}-dev")
+SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}_${MAJOR_VERSION}.${MINOR_VERSION}-${CPACK_PACKAGE_VERSION_PATCH}")
+SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}_${MAJOR_VERSION}.${MINOR_VERSION}-${CPACK_PACKAGE_VERSION_PATCH}")
+
+SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libfreetype6-dev mesa-common-dev")
+SET(CPACK_DEBIAN_PACKAGE_SUGGESTS "libglfw3-dev")
+
+SET(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
+SET(CPACK_DEBIAN_PACKAGE_VERSION "${MAJOR_VERSION}.${MINOR_VERSION}-${CPACK_PACKAGE_VERSION_PATCH}")
+SET(CPACK_DEBIAN_PACKAGE_SECTION "devel")
+SET(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
+
+SET(CPACK_COMPONENTS_ALL Libraries ApplicationData)
+INCLUDE(CPack)
+
+ENDIF(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
