Installer setup for Windows and Linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,38 +147,77 @@ else()
   target_link_libraries(msdfgldemo msdfglshared ${OPENGL_LIBRARIES} ${FREETYPE_LIBRARIES} glfw dl)
 endif()
 
+if (WIN32)
+  install(TARGETS msdfglstatic DESTINATION lib COMPONENT libraries)
+  install (FILES ${CMAKE_CURRENT_BINARY_DIR}/msdfgl.h DESTINATION include COMPONENT headers)
+else ()
+  install(TARGETS msdfglshared msdfglstatic DESTINATION lib)
+  install (FILES ${CMAKE_CURRENT_BINARY_DIR}/msdfgl.h DESTINATION include)
+endif (WIN32)
 
-install(TARGETS msdfglshared msdfglstatic DESTINATION lib)
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/msdfgl.h DESTINATION include)
+if (WIN32)
+  set (CPACK_PACKAGE_NAME "msdfgl")
+  set (CPACK_PACKAGE_VENDOR "Henrik Nyman")
 
+  SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${MSDFGL_DESCRIPTION}")
+  SET(CPACK_PACKAGE_VENDOR "Henrik Nyman")
+  SET(CPACK_PACKAGE_CONTACT "h@nyymanni.com")
+  SET(CPACK_PACKAGE_VERSION_MAJOR "${MAJOR_VERSION}")
+  SET(CPACK_PACKAGE_VERSION_MINOR "${MINOR_VERSION}")
 
-IF(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
-INCLUDE(InstallRequiredSystemLibraries)
+  set (CPACK_PACKAGE_INSTALL_DIRECTORY "msdfgl")
 
+  set (CPACK_COMPONENTS_ALL libraries headers)
+  set (CPACK_COMPONENT_LIBRARIES_DISPLAY_NAME "Libraries")
+  set (CPACK_COMPONENT_HEADERS_DISPLAY_NAME "C Headers")
 
-SET(CPACK_SET_DESTDIR "on")
-SET(CPACK_PACKAGING_INSTALL_PREFIX "/tmp")
-SET(CPACK_GENERATOR "DEB")
+  set (CPACK_COMPONENT_LIBRARIES_DESCRIPTION
+    "MSDFGL static library")
+  set (CPACK_COMPONENT_HEADERS_DESCRIPTION
+    "C/C++ header files for use with MSDFGL")
 
-SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${MSDFGL_DESCRIPTION}")
-SET(CPACK_PACKAGE_VENDOR "Henrik Nyman")
-SET(CPACK_PACKAGE_CONTACT "h@nyymanni.com")
-SET(CPACK_PACKAGE_VERSION_MAJOR "${MAJOR_VERSION}")
-SET(CPACK_PACKAGE_VERSION_MINOR "${MINOR_VERSION}")
-SET(CPACK_PACKAGE_VERSION_PATCH "${PATCH_VERSION}")
-SET(CPACK_PACKAGE_NAME "lib${CMAKE_PROJECT_NAME}-dev")
-SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}_${MAJOR_VERSION}.${MINOR_VERSION}-${CPACK_PACKAGE_VERSION_PATCH}")
-SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}_${MAJOR_VERSION}.${MINOR_VERSION}-${CPACK_PACKAGE_VERSION_PATCH}")
+  set (CPACK_COMPONENT_HEADERS_DEPENDS libraries)
 
-SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libfreetype6-dev mesa-common-dev")
-SET(CPACK_DEBIAN_PACKAGE_SUGGESTS "libglfw3-dev")
+  set(CPACK_COMPONENT_LIBRARIES_GROUP "")
+  set(CPACK_COMPONENT_HEADERS_GROUP "Development")
 
-SET(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
-SET(CPACK_DEBIAN_PACKAGE_VERSION "${MAJOR_VERSION}.${MINOR_VERSION}-${CPACK_PACKAGE_VERSION_PATCH}")
-SET(CPACK_DEBIAN_PACKAGE_SECTION "devel")
-SET(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
+  set(CPACK_COMPONENT_GROUP_DEVELOPMENT_DESCRIPTION
+    "MSDFGL library")
 
-SET(CPACK_COMPONENTS_ALL Libraries ApplicationData)
-INCLUDE(CPack)
+  set(CPACK_ALL_INSTALL_TYPES Full)
+  set(CPACK_COMPONENT_LIBRARIES_INSTALL_TYPES Full)
+  set(CPACK_COMPONENT_HEADERS_INSTALL_TYPES Full)
 
-ENDIF(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
+  include(CPack)
+else ()
+  if(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
+    INCLUDE(InstallRequiredSystemLibraries)
+
+    SET(CPACK_SET_DESTDIR "on")
+    SET(CPACK_PACKAGING_INSTALL_PREFIX "/tmp")
+    SET(CPACK_GENERATOR "DEB")
+
+    SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${MSDFGL_DESCRIPTION}")
+    SET(CPACK_PACKAGE_VENDOR "Henrik Nyman")
+    SET(CPACK_PACKAGE_CONTACT "h@nyymanni.com")
+    SET(CPACK_PACKAGE_VERSION_MAJOR "${MAJOR_VERSION}")
+    SET(CPACK_PACKAGE_VERSION_MINOR "${MINOR_VERSION}")
+    SET(CPACK_PACKAGE_VERSION_PATCH "${PATCH_VERSION}")
+    SET(CPACK_PACKAGE_NAME "lib${CMAKE_PROJECT_NAME}-dev")
+    SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}_${MAJOR_VERSION}.${MINOR_VERSION}-${CPACK_PACKAGE_VERSION_PATCH}")
+    SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}_${MAJOR_VERSION}.${MINOR_VERSION}-${CPACK_PACKAGE_VERSION_PATCH}")
+
+    SET(CPACK_DEBIAN_PACKAGE_DEPENDS "")
+    SET(CPACK_DEBIAN_PACKAGE_SUGGESTS "")
+
+    SET(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
+    SET(CPACK_DEBIAN_PACKAGE_VERSION "${MAJOR_VERSION}.${MINOR_VERSION}-${CPACK_PACKAGE_VERSION_PATCH}")
+    SET(CPACK_DEBIAN_PACKAGE_SECTION "devel")
+    SET(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
+
+    SET(CPACK_COMPONENTS_ALL Libraries ApplicationData)
+    INCLUDE(CPack)
+
+  endif(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
+
+endif(WIN32)
