Combining all glsl sources into a C header works now.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required(VERSION 3.9 FATAL_ERROR)
 project(msdfgl VERSION 0.2.1 DESCRIPTION "OpenGL MSDF Generator and renderer" LANGUAGES C)
 
+include(GNUInstallDirs)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})
+
 option(BUILD_SHARED_LIBS "Build Shared Libraries" ON)
 option(BUILD_MSDFGL_EXAMPLE "Build MSDF example project" ON)
 
