Fixed Linux GCC build.

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -2,6 +2,7 @@ add_executable(msdfgldemo demo.c)
 
 find_package(glfw3 3.3 QUIET)
 if(NOT TARGET glfw)
+    include(FetchContent)
     FetchContent_Declare(glfw3
             URL https://github.com/glfw/glfw/archive/3.3.1.tar.gz
             URL_MD5 ffa7c0d8547f56b0897276c59efdd641
