Removed GLFW and Freetype install steps.

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -9,7 +9,7 @@ if(NOT TARGET glfw)
             )
     FetchContent_GetProperties(glfw3)
     if(NOT glfw3_POPULATED)
-        foreach(_glfw3_option "GLFW_BUILD_TESTS" "GLFW_BUILD_EXAMPLES" "GLFW_BUILD_DOCS")
+        foreach(_glfw3_option "GLFW_BUILD_TESTS" "GLFW_BUILD_EXAMPLES" "GLFW_BUILD_DOCS" "GLFW_INSTALL")
             set(${_glfw3_option} OFF CACHE INTERNAL "")
         endforeach()
         FetchContent_Populate(glfw3)
