Fixed semicolons from getting stripped out.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,11 +8,11 @@ foreach(_temp_msdfgl_shader IN LISTS _temp_msdfgl_shaders)
     get_filename_component(_temp_shader_name ${_temp_msdfgl_shader} NAME_WE)
     # Reads the contents of the GLSL shader.
     file(READ ${_temp_msdfgl_shader} _temp_shader_contents)
-    # Escapes characters so they can be contained in C style strings.
-    string(REPLACE "\"" "\\\"" _temp_shader_contents ${_temp_shader_contents})
-    string(REPLACE "\\" "\\\\" _temp_shader_contents ${_temp_shader_contents})
+    string(REGEX REPLACE "\n$" "" _temp_shader_contents "${_temp_shader_contents}")
+    # Escapes backslash characters from source glsl.
+    string(REPLACE "\\" "\\\\" _temp_shader_contents "${_temp_shader_contents}")
     # Add quotes around each line in the shader.
-    string(REPLACE "\n" "\"\n\"" _temp_shader_contents ${_temp_shader_contents})
+    string(REPLACE "\n" "\\n\"\n\"" _temp_shader_contents "${_temp_shader_contents}")
     set(_temp_msdfgl_shaders_sources "${_temp_msdfgl_shaders_sources}\n\nconst char * _${_temp_shader_name} = \"${_temp_shader_contents}\";")
 endforeach()
 # Write a header guard around our GLSL shader sources.
